--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Custom
+ifj23
 
 
 ### VisualStudioCode ###
@@ -40,7 +41,6 @@
 
 # Executables
 *.exe
-*.out
 *.app
 *.i*86
 *.x86_64
@@ -61,17 +61,3 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
-
-### CMake ###
-CMakeLists.txt.user
-CMakeCache.txt
-CMakeFiles
-CMakeScripts
-Testing
-Makefile
-cmake_install.cmake
-install_manifest.txt
-compile_commands.json
-CTestTestfile.cmake
-_deps
-*-prefix/
