--- a/.github/workflows/c.yml
+++ b/.github/workflows/c.yml
@@ -11,9 +11,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: configure
-      run: ./configure
+    - uses: actions/checkout@v4
+    - name: Setup Python Version
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.8 # Install the python version needed
+
+    - name: Install Python dependencies
+      run: python -m pip install --upgrade pip requests
+
     - name: make
       run: make
     - uses: EnricoMi/publish-unit-test-result-action@v2
