--- a/.github/workflows/c.yml
+++ b/.github/workflows/c.yml
@@ -9,6 +9,12 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    
+    permissions:
+      contents: read
+      issues: read
+      checks: write
+      pull-requests: write
 
     steps:
     - uses: actions/checkout@v4
@@ -25,4 +31,4 @@ jobs:
     - uses: EnricoMi/publish-unit-test-result-action@v2
     - name: make test
       run: make test
-           test-results/**/*.xml
+           testresults/**/*.xml
